# sck-core-organization

./: .gitignore  .lambda  README.md  pyproject.toml  pytest.ini
core_organization/: __init__.py  handler.py  response.py  scp.py  units.py
platform/: deploysepc.yaml  teardownspec.yaml
platform/components/: cfn-custom-resource-handler.yaml  core-organization-lambda.yaml  deploy-custom-resource-handler.sh
tests/: example.yml  test-create-scp.json  test_handler.py
